spec-determinism/vstd-survey/experiments/repro-2026-07-21-impl-methods/artifacts/cell__replace__L223/verus_stderr.txt
warning: use of deprecated method `vstd::cell::PCell::<V>::id`: use `vstd::cell::pcell::PCell` or `vstd::cell::pcell_maybe_uninit::PCell` instead
  --> vstd-survey/experiments/repro-2026-07-21-impl-methods/artifacts/cell__replace__L223/harness.rs:16:21
   |
16 |     requires (self_.id() == pre_perm@.pcell), (pre_perm.is_init()),
   |                     ^^
   |
   = note: `#[warn(deprecated)]` on by default

error[E0599]: no method named `addr` found for struct `vstd::cell::PointsTo<V>` in the current scope
  --> vstd-survey/experiments/repro-2026-07-21-impl-methods/artifacts/cell__replace__L223/harness.rs:29:51
   |
29 |     if g__pre_perm__addr___eq { assume((pre_perm).addr() as int == k__pre_perm__addr___eq); }
   |                                                   ^^^^ method not found in `vstd::cell::PointsTo<V>`

error[E0599]: no method named `addr` found for struct `vstd::cell::PointsTo<V>` in the current scope
  --> vstd-survey/experiments/repro-2026-07-21-impl-methods/artifacts/cell__replace__L223/harness.rs:30:52
   |
30 |     if g__pre_perm__addr___rng { assume((pre_perm).addr() as int >= k__pre_perm__addr___rng_lo && (pre_perm).addr() as int <= k__pre...
   |                                                    ^^^^ method not found in `vstd::cell::PointsTo<V>`

error[E0599]: no method named `addr` found for struct `vstd::cell::PointsTo<V>` in the current scope
  --> vstd-survey/experiments/repro-2026-07-21-impl-methods/artifacts/cell__replace__L223/harness.rs:30:110
   |
30 | ..._pre_perm__addr___rng_lo && (pre_perm).addr() as int <= k__pre_perm__addr___rng_hi); }
   |                                           ^^^^ method not found in `vstd::cell::PointsTo<V>`

error[E0599]: no method named `addr` found for struct `vstd::cell::PointsTo<V>` in the current scope
  --> vstd-survey/experiments/repro-2026-07-21-impl-methods/artifacts/cell__replace__L223/harness.rs:33:55
   |
33 |     if g__post1_perm__addr___eq { assume((post1_perm).addr() as int == k__post1_perm__addr___eq); }
   |                                                       ^^^^ method not found in `vstd::cell::PointsTo<V>`

error[E0599]: no method named `addr` found for struct `vstd::cell::PointsTo<V>` in the current scope
  --> vstd-survey/experiments/repro-2026-07-21-impl-methods/artifacts/cell__replace__L223/harness.rs:34:56
   |
34 |     if g__post1_perm__addr___rng { assume((post1_perm).addr() as int >= k__post1_perm__addr___rng_lo && (post1_perm).addr() as int <...
   |                                                        ^^^^ method not found in `vstd::cell::PointsTo<V>`

error[E0599]: no method named `addr` found for struct `vstd::cell::PointsTo<V>` in the current scope
  --> vstd-survey/experiments/repro-2026-07-21-impl-methods/artifacts/cell__replace__L223/harness.rs:34:118
   |
34 | ...t1_perm__addr___rng_lo && (post1_perm).addr() as int <= k__post1_perm__addr___rng_hi); }
   |                                           ^^^^ method not found in `vstd::cell::PointsTo<V>`

error[E0599]: no method named `addr` found for struct `vstd::cell::PointsTo<V>` in the current scope
  --> vstd-survey/experiments/repro-2026-07-21-impl-methods/artifacts/cell__replace__L223/harness.rs:37:55
   |
37 |     if g__post2_perm__addr___eq { assume((post2_perm).addr() as int == k__post2_perm__addr___eq); }
   |                                                       ^^^^ method not found in `vstd::cell::PointsTo<V>`

error[E0599]: no method named `addr` found for struct `vstd::cell::PointsTo<V>` in the current scope
  --> vstd-survey/experiments/repro-2026-07-21-impl-methods/artifacts/cell__replace__L223/harness.rs:38:56
   |
38 |     if g__post2_perm__addr___rng { assume((post2_perm).addr() as int >= k__post2_perm__addr___rng_lo && (post2_perm).addr() as int <...
   |                                                        ^^^^ method not found in `vstd::cell::PointsTo<V>`

error[E0599]: no method named `addr` found for struct `vstd::cell::PointsTo<V>` in the current scope
  --> vstd-survey/experiments/repro-2026-07-21-impl-methods/artifacts/cell__replace__L223/harness.rs:38:118
   |
38 | ...t2_perm__addr___rng_lo && (post2_perm).addr() as int <= k__post2_perm__addr___rng_hi); }
   |                                           ^^^^ method not found in `vstd::cell::PointsTo<V>`

error: aborting due to 9 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0599`.
